log
Sun 30 Apr 2023 08:06:21 PM UTC: 
 tests:  0|5
total_score: 0/70
547bbc6
Sun 30 Apr 2023 08:16:27 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
a8d8a3c
Sun 30 Apr 2023 08:21:39 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:26: error: subscripted value is neither array nor pointer nor vector
   57 |         printf("%d", n[i][j]);
      |                          ^
Compilation failed
db61771
Sun 30 Apr 2023 08:21:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d3ba289
